<resources>
    <string name="app_name">UTS_ALARAI</string>
    <string name="instruct_input">Ayah Bunda silakan mengisi data anak di bawah ini</string>
    <string name="parent_welcome_image_content_desc">Parent Welcome image</string>
    <string name="nama_panggilan_anak_hint">Isi dengan nama anak anda</string>
    <string name="nama_panggilan_anak_txt">Nama Panggilan Anak</string>
    <string name="umur_hint">cth: 12</string>
    <string name="umur_txt">Umur Saat ini</string>
    <string name="jenis_kelamin_txt">Jenis Kelamin</string>
    <string name="laki_laki_opt">Laki-laki</string>
    <string name="perempuan_opt">Perempuan</string>
    <string name="note_txt">*Umur diperlukan untuk rekomendasi waktu penggunaan handpone anak anda</string>
    <string name="empty_input_message">Silahkan isi semua biodata</string>
    <string name="daftar_btn_txt">Daftar</string>
    <string name="lihat_tutorial_btn_txt">Lihat Tutorial</string>
    <string name="home_hint">Bingung saat membuat kesepakatan instalasi dengan anak?</string>
    <string name="greet">Yeay, Selamat :)</string>
    <string name="default_home_hello">Aldebaran Abqori Kurniawan Laki-laki 12 tahun Berhasil Ditambahkan. Silahkan Gunakan Kode Ini Untuk Masukkan Kedalam Aplikasi Anak</string>
    <string name="default_code_txt">AVGR99</string>
    <string name="NAMA_PUT_EXTRA">NAMA</string>
    <string name="JK_PUT_EXTRA">JK</string>
    <string name="UMUR_PUT_EXTRA">UMUR</string>
</resources>
