<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorGrey"
    android:orientation="vertical"
    android:paddingVertical="@dimen/dimen30"
    android:paddingHorizontal="@dimen/dimen25">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimen20"
        android:background="@drawable/card"
        android:padding="@dimen/dimen15"
        android:gravity="center">
        <ImageView
            android:layout_width="@dimen/dimen150"
            android:layout_height="@dimen/dimen180"
            android:background="@drawable/ic_welcome_parent"
            android:layout_marginBottom="@dimen/dimen10"
            android:contentDescription="@string/parent_welcome_image_content_desc" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greet"
            android:textAlignment="center"
            android:textSize="@dimen/font18"
            android:fontFamily="@font/nunito_semibold"
            android:layout_marginBottom="@dimen/dimen10"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/home_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_home_hello"
            android:textAlignment="center"
            android:paddingHorizontal="@dimen/dimen10"
            android:textSize="@dimen/font14"
            android:fontFamily="@font/nunito_semibold"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dimen10"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_code_txt"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            style="@style/GreenOutline"
            android:paddingVertical="@dimen/dimen5"
            android:paddingHorizontal="@dimen/dimen30"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_hint"
        android:textColor="@color/colorBlack"
        android:textAlignment="center"
        android:gravity="center_horizontal" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen20"/>
    <Button
        android:id="@+id/daftar_btn"
        android:paddingHorizontal="@dimen/dimen40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lihat_tutorial_btn_txt"
        android:paddingVertical="@dimen/dimen12"
        android:layout_gravity="center"
        style="@style/CustomButton"/>

</LinearLayout>